--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  color: black;
 }
 
 .App {
@@ -25,6 +26,7 @@ header {
 }
 
 .card {
+  text-decoration: none;
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
