--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -34,6 +34,7 @@ header {
   border: solid black 3px;
   border-radius: 3%;
   width: 31%;
+  height: 400px;
   margin: 1%;
 }
 
@@ -46,6 +47,6 @@ header {
 }
 
 .pokemon-image {
-  width: 100%;
-  max-height: 100%;
+  height: 100%;
+  width: 80%;
 }
