--- a/src/styles/DisplayPokemonDetails.css
+++ b/src/styles/DisplayPokemonDetails.css
@@ -61,6 +61,10 @@
   width: 80%;
 }
 
+.pokemon-presentation .pokemon-description {
+  text-align: center;
+}
+
 .pokemon-stats .stat-name {
   text-align: center;
   margin-top: 0.5em;
