--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -20,6 +20,7 @@ header .image-container {
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
+  align-items: center;
 }
 
 .logo {
